2013-02-21 Alexander Malysh <amalysh at kannel.org>
    * gw/sms.[ch]: made prepend_catenation_udh function global.

2013-02-13 Alexander Malysh <amalysh at kannel.org>
    * gw/charset.c: don't call iconv if charset from & to equal

2013-02-12 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c, gw/smsbox.c: fixed issue with validity and deferred
      introduced by the converting to unix timestamp.

2013-02-11 Alexander Malysh <amalysh at kannel.org>
    *  doc/userguide/userguide.xml, gw/smsc/smsc_http.c, gw/urltrans.c: added
       support for validity and deferred values.

2013-02-09 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed issue reseting user configuration parameters.
      This should fix #680.

2013-02-04 Alexander Malysh <amalysh at kannel.org>
    * changed validity and deferred fields to unix timestamp. Nothing changed
      for the external calls for smsbox.

2012-12-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/utils.c: fixed initgroups call. This fixes #676.
      Thanks to  Alexandr Ryabukhin for report.

2012-12-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/utils.c: applied patch that display compiled PostgreSQL version.
      Thanks to Alexey Savchuk <international at devpreview.ru> for this patch.

2012-12-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gw-prioqueue.c, gwlib/gwthread-pthread.c, gwlib/list.c: fixed
      gwthread_cancel function. This commit fixes #667.

2012-10-31  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: the sscanf() is NOT taking a POSIX regex pattern.
      The '^' chracter is NOT representing a "must start", but an "does not
      include". So the whole pattern refuses msg IDs that contain a 's'
      character. Fixed this to comply now with the real printf() semantics.
      This fixes bug #663. Thanks to Mark Poulsen for the bug report.
      
2012-10-19  Stipe Tolj  <stolj at kannel.org>